<resources>
    <string name="app_name">One Market</string>
    <string name="title_home">Home</string>
    <string name="title_categories">Categories</string>
    <string name="title_wishlist">Wishlist</string>
    <string name="title_sell">Sell</string>
    <string name="app_short_name">One Market</string>

    <!-- Activity Titles-->
    <string name="title_activity_cart">Cart</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_sign_in">Sign In</string>
    <string name="title_activity_sell">My Shop</string>
    <string name="activity_profile">Profile</string>
    <string name="activity_cart">Cart</string>
    <string name="activity_settings">Settings</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_add_prod">Add Product</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="action_search">Search</string>

    <string name="search_hint">Search products</string>

    <string name="title_ask">Ask</string>
    <string name="button_register">Register</string>
    <string name="product_image_description">Product image description</string>
    <string name="hint_product_name">Product name</string>
    <string name="hint_price">Price</string>
    <string name="currency_mk">Mk</string>
    <string name="hint_description">Description</string>
    <string name="hint_location">Location</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="label_delivery_options">Delivery Options</string>
    <string name="label_in_person">In-person</string>
    <string name="label_axa">Axa</string>
    <string name="label_speed">Speed</string>
    <string name="label_kweezy">Kweezy</string>
    <string name="label_payement_options">Payement Options</string>
    <string name="label_visa">Visa</string>
    <string name="label_hard_cash">Hard Cash</string>
    <string name="label_mobile_bank_transfer">Mobile Bank Transfer</string>
    <string name="label_mobile_wallet">Mobile Wallet</string>
    <string name="label_paypal">PayPal</string>
    <string name="label_add">Add</string>
    <string name="label_add_image">Click to add image</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>

    <string name="dummy_text_short">Lorem ipsum dolor</string>
    <string name="dummy_text_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sed augue consequat, tincidunt quam commodo, convallis libero. In porttitor rutrum neque, sed dictum lorem condimentum sed.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="server_client_id">1003907937454-f7d75rpuqgfmr52r4jcsqn2bf5lbn6p9.apps.googleusercontent.com</string>

</resources>
