<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"

        android:title="@string/action_search"
        app:showAsAction="always|collapseActionView"
        android:icon="@drawable/baseline_search_24"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:orderInCategory="1"
        />


    <item android:id="@+id/action_profile"
        android:title="@string/activity_profile"
        android:icon="@drawable/ic_menu_profile"
        app:showAsAction="ifRoom"
        android:orderInCategory="2"

        />

    <item android:id="@+id/action_cart"
        android:title="@string/activity_cart"
        android:icon="@drawable/ic_menu_cart_24"
        app:showAsAction="always"
        android:orderInCategory="3"
        />

    <item android:id="@+id/action_settings"
        android:title="@string/activity_settings"
        app:showAsAction="never"
        android:orderInCategory="4"
        />

</menu>